# STCTestTask

./: CMakeLists.txt  Main.cpp  MainRunUnitTests.cpp
Program/: ImageProcessor.cpp  ImageProcessor.hpp  MainProgram.cpp  Options.cpp  Options.hpp
Scripts/: DeployOpenCV.sh
